--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,12 @@
 title: Java Concepts
 author: Jan Villapaz
-email: janvillapaz@outlook.com
 description: >-
   A simple blog to help me understand and explain core Java concepts.
 
 baseurl: "/java-concepts" # ONLY needed for project pages
 url: "https://janvillapaz.github.io"
 
-theme: minima
+remote_theme: pages-themes/hacker@v0.2.0
 
 # Optional: social links
 instagram_username: iamnotgian
@@ -15,4 +14,4 @@ github_username: JanVillapaz
 
 # Build settings
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme
