--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Java Concepts
 author: Jan Villapaz
+email: janvillapaz@outlook.com
 description: >-
   A simple blog to help me understand and explain core Java concepts.
 
