--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >-
 baseurl: "/java-concepts" # ONLY needed for project pages
 url: "https://janvillapaz.github.io"
 
-remote_theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 
 # Optional: social links
 instagram_username: iamnotgian
